--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">ClassStart</string>
+    <string name="notes">Notes</string>
+    <string name="files">Files</string>
+    <string name="reminders">Reminders</string>
 </resources>
